--- a/views/index.html
+++ b/views/index.html
@@ -3,14 +3,26 @@
 <html>
 
 <head>
-	<title>Timestamp Microservice | freeCodeCamp.org</title>
+	<title>npm projects | freeCodeCamp.org</title>
 	<link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<div class="container">
+    <section>
+ 		<h2>URL Shortener Microservice</h2>
+       <form action="api/shorturl/new" method="POST">
+          <fieldset>
+            <legend>URL Shortener</legend>
+            <label for="url_input">URL:</label>
+            <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
+            <input type="submit" value="POST URL" />
+          </fieldset>
+        </form>
+      </section>
+	<hr />
+	<section>
 		<h2>Timestamp Microservice</h2>
 		<h3>Example Usage:</h3>
 		<ul>
@@ -22,9 +34,9 @@
 		<p>
 			<code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
       </p>
-    </div>
+    </section>
 	<hr />
-   <div class="container">
+   <section>
         <h2>Request Header Parser Microservice</h2>
 
         <h3>Example Usage:</h3>
@@ -36,11 +48,11 @@
         <p>
           <code>{"ipaddress":"::ffff:159.20.14.100","language":"en-US,en;q=0.5",<br>"software":"Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:50.0) Gecko/20100101 Firefox/50.0"}</code>
         </p>
-      </div>    
-    <div class="footer">
+      </section>    
+    <footer>
       <p>
         By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
       </p>
-    </div>
+    </footer>
   </body>
 </html>
