--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,6 @@
-/****** Main Styling ******/
+* {
+  box-sizing: border-box;
+}
 
 body {
 	font-family: 'Roboto', sans-serif;
@@ -43,4 +45,37 @@ li {
 
 a {
 	color: #2574A9;
+}
+
+form {
+  margin-bottom: 25px;
+  padding: 15px;
+  background-color: #87D37C;
+  display: inline-block;
+  width: 100%;
+  max-width: 340px;
+  border-radius: 5px;
+}
+
+input {
+  display: block;
+  margin-bottom: 10px;
+  padding: 5px;
+  width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 3px;
+  font-size: 16px;
+}
+
+input[type=submit] {
+  font-size: 16px;
+  border-radius: 3px;
+  background-color: #E4F1FE;
+  border: 1px solid grey;
+  box-shadow: 2px 2px #999;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #FFFEC4;
 }
