file upload skeleton

--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,14 @@
 
 <body>
 	<section>
+		<h2>API Project: File Metadata Microservice</h2>
+		<form enctype="multipart/form-data" method="POST" action="/api/fileanalyse">
+			  <input id="inputfield" type="file" name="upfile">
+        <input id="button" type="submit" value="Upload">
+          </form>
+    </section>
+	<hr />
+	<section>
 		<h2>Exercise tracker</h2>
 		<form action="/api/exercise/new-user" method="post">
 			<h3>Create a New User</h3>
